Upgraded to Angular2 version 2.1.1

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
+<!DOCTYPE html>
 <html>
-
   <head>
+    <base href="/">
     <title>Tool Tip Component Test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-
   <body>
     <test-app></test-app>
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
-    <script src="dist/app.bundle.js"></script>
-    <script src="dist/vendor.bundle.js"></script>
+  </body>
 </html>
